--- a/yaml/cookbook/new_t2_compass/process_middle_table_mt_way_2.yml
+++ b/yaml/cookbook/new_t2_compass/process_middle_table_mt_way_2.yml
@@ -482,7 +482,7 @@ mt_daily_env:
               need['avg_daily_knight'] = need['total_have_order_knight'] / need['days']
               result = to_dd(need)
         - fetch_cols:
-            columns: [vendor_dc_id,meta_day,total_register_knight,total_order,total_utility,avg_daily_knight]
+            columns: [alliance_id,meta_day,total_register_knight,total_order,total_utility,avg_daily_knight]
 
 
     - name: mt_total_details_city_median
@@ -1222,26 +1222,6 @@ mt_daily_env:
               15分钟超时订单占比X: X5
               15分钟超时订单占比Y: Y5
               15分钟超时订单占比Z: Z5
-        - df_to_int:
-            - vendor_dc_id
-        - run_py:
-            - |
-              df=to_df(df)
-              df['vendor_dc_id']=[u'%s' % i for i in df[u'vendor_dc_id']]
-              result=to_dd(df)
-        - stash_push_df: []
-        - stash_join_df:
-            how: right
-            on: vendor_dc_id
-            fillna: 0
-            drop_stash: True
-        - set_meta_days_column:
-            - 当月总天数
-        - run_py:
-            - |
-                df=to_df(df)
-                df['days'] = df['book_day'].map(str).str[6:].map(int)
-                result = to_dd(df)
         - str_strip_column:
             column: X1
             char: '%'
@@ -1347,6 +1327,26 @@ mt_daily_env:
             - Z5
         - df_eval:
             - '[Z5] = [Z5] / 100'
+        - df_to_int:
+            - vendor_dc_id
+        - run_py:
+            - |
+              df=to_df(df)
+              df['vendor_dc_id']=[u'%s' % i for i in df[u'vendor_dc_id']]
+              result=to_dd(df)
+        - stash_push_df: []
+        - stash_join_df:
+            how: right
+            on: vendor_dc_id
+            fillna: 0
+            drop_stash: True
+        - set_meta_days_column:
+            - 当月总天数
+        - run_py:
+            - |
+                df=to_df(df)
+                df['days'] = df['book_day'].map(str).str[6:].map(int)
+                result = to_dd(df)
         - push_dataset:
             key: mt_kpi_detail_mini
 
